FISH-10024 Remove redundant JVM option
Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>